warehouse/force-app/main/default/objects/ShipmentTracking__e/ShipmentTracking__e.object-meta.xml
<CustomObject>
    <label>Shipment Tracking</label>
    <pluralLabel>Shipment Trackings</pluralLabel>
    <description>Shipment tracking update events</description>
</CustomObject>