warehouse/force-app/main/default/objects/ShipmentTracking__e/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <label>Customer Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>