warehouse/force-app/main/default/objects/ShipmentTracking__e/fields/EstimatedArrivalTime__c.field-meta.xml
<CustomField>
    <fullName>EstimatedArrivalTime__c</fullName>
    <defaultValue>Now() + 1.5</defaultValue>
    <label>Estimated Arrival Time</label>
    <type>DateTime</type>
</CustomField>