warehouse/force-app/main/default/objects/ShipmentTracking__e/fields/ProductOrderId__c.field-meta.xml
<CustomField>
    <fullName>ProductOrderId__c</fullName>
    <label>Product Order ID</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>