warehouse/force-app/main/default/objects/ShipmentTracking__e/fields/ShipmentTime__c.field-meta.xml
<CustomField>
    <fullName>ShipmentTime__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Shipment Time</label>
    <type>DateTime</type>
</CustomField>