warehouse/force-app/main/default/objects/ShipmentTracking__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Shipped&quot;</defaultValue>
    <description>The tracking status. One of: &quot;Shipped&quot;, &quot;In Transit&quot; or &quot;Out for Delivery&quot;</description>
    <label>Status</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>